# rag-obsidian

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CLAUDE.md  GAME_CHANGERS_STATUS.md  Makefile  README.md  mcp_server.py  pyproject.toml  queries.yaml  queries_adversarial.yaml  rag.py
.claude/agents/: README.md  developer01.md  developer02.md  developer03.md  pm.md  rag-anticipatory.md  rag-brief-curator.md  rag-doc-curator.md  (+17 more)
.devin/: config.json
.github/: dependabot.yml
.scheduled-agents/: fine-tunning-audit-2026-05-04.md
benchmarks/: README.md  bench_anticipate_signals.py  bench_mlx_models.py  bench_mlx_vs_ollama.py  bench_models.py  bench_simple.py
completions/: _rag
docs/: PROJECT_STATUS_2026-05-15.md  README.md  SYSTEM.md  anticipatory-agent.md  anticipatory-signals-cookbook.md  automatizaciones.md  code-review-followup.md  comandos.md  como-funciona.md  daemons.md  design-cross-source-corpus.md  empezar.md  env-vars-catalog.md  env-vars.md  eval-baselines-2026-04-15.md  eval-baselines-2026-04-23.md  eval-tune-2026-04-15.md  feedback-loops.md  finetune-run-2026-04-22.md  gamechangers-plan-2026-04-22.md  improvement-1-nli-integration-plan.md  improvement-1-nli-model-selection.md  improvement-2-entity-extraction-design.md  improvement-2-entity-retrieval-plan.md  improvement-3-adaptive-routing-design.md  improvement-3-decomposition-plan.md  microservices-plan.md  mlx-migration.md  problemas-comunes.md  query-replay.md  recovery.md  regression-investigation-2026-04-15.md  retrieval-internals.md  retrieve-split-plan.md  telemetry-stack.md  training-pairs-miner-analysis-2026-04-22.md  tune-run-2026-04-22.md  variables-entorno.md  wave-8-gotchas.md  web-chat-features.md
plans/: anticipatory-agent.md  episodic-memory.md  package-split-2026-04-29.md
rag/: __init__.py  __main__.py  _anaphora.py  _auto_index.py  _constants.py  _duplicate_detection.py  _filing.py  _memory_pressure_watchdog.py  _model_hooks.py  _ollama_health.py  _person_mentions.py  _replay_payload.py  _row_mappers.py  _sessions.py  _shutdown.py  _sql_state_io.py  _surface.py  _telemetry_ddl.py  _temporal_intent.py  _tool_output_helpers.py  _topic_shift.py  _wal_watchdog.py  _wikilink_suggest.py  anticipatory.py  archive.py  brief_schedule.py  cache.py  chrome_bookmarks_index.py  contextual_retrieval.py  contradictions_penalty.py  conversation_distiller.py  cross_source_collectors.py  cross_source_etls.py  cross_source_patterns.py  drafts_ft.py  embedding_cache.py  episodic.py  exclusions.py  hierarchical_cache.py  iberian_leak_filter.py  (+49 more)
rag_anticipate/: __init__.py  dashboard.py  feedback.py  feedback_tuning.py  kind_weights.py  lockfile.py  quiet_hours.py  voice.py  weights.py
rag_implicit_learning/: __init__.py  auto_rollback.py  corrective_paths.py  llm_judge_ensemble.py  requery_detection.py  reward_shaping.py  session_outcome.py
rag_negotiations/: __init__.py  crud.py  state_machine.py
rag_ranker_lgbm/: __init__.py  eval.py  features.py  hard_negatives.py  inference.py  synthetic_queries.py  train.py
rag_routing_learning/: __init__.py  patterns.py  promote.py
rag_whisper_learning/: __init__.py  patterns.py  vocab.py
scheduled-agents/: fine-tunning-audit-2026-05-04.md
scratch_eval/: README.md  queries.yaml  run_eval.py
scripts/: README.md  audit_env_vars.py  audit_telemetry_health.py  augment_drafts_dataset.py  backfill_draft_decisions.py  backfill_entities.py  bench_chat.py  bootstrap_calendar_oauth.py  bootstrap_google_oauth.py  calibrate_thresholds.py  cleanup_bot_behavior_rows.py  cleanup_vault_transient.py  cloudflared_watcher.sh  com.fer.obsidian-rag-drift-watcher.plist  com.fer.obsidian-rag-routing-rules.plist  com.fer.obsidian-rag-serve-watchdog.plist  com.fer.obsidian-rag-spotify-poll.plist  consolidate_conversations.py  draft-fail-postmortem.sh  drift_watcher.py  eval_progress.py  eval_pt_leaks.py  eval_reranker_mlx_tiers.py  export_training_pairs.py  finetune_drafts.py  finetune_drafts_mlx.py  finetune_reranker.py  finetune_reranker_mlx.py  gen_chat_flow_excalidraw.py  gen_pwa_assets.py  gen_zsh_completion.py  generate_adversarial_queries.py  index_progress.py  ingest_base.py  ingest_calendar.py  ingest_calls.py  ingest_contacts.py  ingest_gdrive.py  ingest_gmail.py  ingest_reminders.py  (+28 more)
tests/: bench_mlx_vs_ollama.py  conftest.py  contradiction_cases.yaml  test_active_learning_nudge.py  test_adaptive_fast_path.py  test_adaptive_k.py  test_adaptive_metadata_skip.py  test_adaptive_routing_default.py  test_adaptive_routing_flag.py  test_agenda_window.py  test_agent_append_to_note.py  test_agent_pending_writes_lock.py  test_agent_propose_write.py  test_ambient.py  test_anaphora_resolver.py  test_anticipate_active_context.py  test_anticipate_agent.py  test_anticipate_anniversary.py  test_anticipate_birthday_today.py  test_anticipate_commitment_deadline.py  test_anticipate_dashboard.py  test_anticipate_deadline.py  test_anticipate_dupes_pressure.py  test_anticipate_e2e.py  test_anticipate_echo_memory_gate.py  test_anticipate_feedback.py  test_anticipate_feedback_endpoint.py  test_anticipate_gap.py  test_anticipate_inbox_pressure.py  test_anticipate_inbox_routes.py  test_anticipate_lockfile.py  test_anticipate_meeting_pre.py  test_anticipate_mood_drift.py  test_anticipate_open_loop_question.py  test_anticipate_orphan_surface.py  test_anticipate_person_reunion.py  test_anticipate_phase2.py  test_anticipate_pre_trip_checklist.py  test_anticipate_question_awaiting.py  test_anticipate_quiet_hours.py  (+495 more)
web/: README.md  _admin.py  _intent_detection.py  _lifecycle.py  _metachat.py  _ollama_compat.py  _source_intent.py  _tool_formatters.py  action_routes.py  anticipate_routes.py  atlas_dashboard.py  basic_routes.py  blacklist_routes.py  chat_config.py  chat_schemas.py  chat_uploads.py  conversation_writer.py  finance_dashboard.py  fine_tunning_queries.py  interaction_routes.py  learning_queries.py  memo_dashboard.py  memo_routes.py  memo_v06.py  memory_routes.py  mission_control.py  negotiation_routes.py  prompt_routes.py  rate_limit.py  server.py  tools.py  ui_layout_routes.py
(+312 files in other folders)
