[project]
name = "obsidian-rag"
version = "0.1.0"
description = "Local RAG over an Obsidian vault — sqlite-vec + MLX + sentence-transformers, no cloud calls."
requires-python = ">=3.13"
dependencies = [
    "sqlite-vec>=0.1.6",
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "click>=8.3.2",
    # `ollama>=0.6.1` removido en Ola 8 (2026-05-06): post-cutover MLX,
    # ningún call site runtime importa el paquete. Si necesitás rollback
    # de emergencia (`RAG_LLM_BACKEND=ollama` ya no es soportado, requiere
    # `git revert` de Ola 7+ commits), instalá manual `uv pip install
    # ollama>=0.6.1` antes.
    "rank-bm25>=0.2.2",
    "rich>=15.0.0",
    "pyyaml>=6.0",
    # sentence-transformers is CORE (not optional): CrossEncoder is the
    # reranker used on every retrieve() call (rag.py:7469). Moving it to
    # an extra would break the default install. Local-embed path
    # (RAG_LOCAL_EMBED=1, rag.py:6770) reuses the same lib via
    # SentenceTransformer — no separate dep needed.
    "sentence-transformers>=3.0",
    "mcp>=1.0",
    "watchdog>=6.0.0",
    "google-api-python-client>=2.0",
    "google-auth>=2.0",
    "google-auth-oauthlib>=1.2",
    "youtube-transcript-api>=1.0",
    "dateparser>=1.2",
    # OCR on embedded images during indexing (rag.py:_ocr_image). Uses Apple
    # Vision via pyobjc — macOS-only. On non-macOS hosts the import fails
    # and the indexer silent-skips OCR. Enables queries like "en qué cycle
    # estamos" to hit notes whose informative content sits in a screenshot
    # rather than the markdown body. Toggle OFF with `RAG_OCR=0`.
    #
    # The `sys_platform == 'darwin'` PEP 508 marker prevents uv from trying
    # to install pyobjc-framework-coreml on Linux CI runners, where it
    # fails at build time with `FileNotFoundError: /usr/bin/sw_vers`.
    # Runtime code guards with `try: import ocrmac` so the absence is
    # silent on non-macOS.
    "ocrmac>=1.0; sys_platform == 'darwin'",
    # LightGBM lambdarank — Sprint 2 del cierre del loop de aprendizaje
    # (2026-04-26). Modelo de ranker no-lineal entrenado sobre rag_feedback.
    # Wheel ~5MB, inference ~50ms sobre top-15. Si nunca activamos el
    # path lambdarank (RAG_RANKER_LAMBDARANK!=1), la dep solo agrega
    # el package al venv pero nunca se importa en hot path.
    "lightgbm>=4.0",
    # pillow-heif registra el HEIC/HEIF reader en PIL para que
    # `_sanitize_image_exif` (web/server.py) pueda strippear EXIF/GPS de
    # las fotos que el user sube via PWA desde el iPhone (formato HEIC
    # default). Sin esta dep, las HEIC eran passthrough y conservaban GPS
    # coords al copiarse al vault iCloud. Audit 2026-04-25 R2-OCR #4
    # followup. Pillow se pulla transitivamente; explicitamos solo el
    # plugin HEIF.
    "pillow-heif>=1.0",
    # openpyxl parsea los `Último resumen - <Marca> <Últimos4>.xlsx` que
    # el banco emite y el user deja en iCloud `/Finances` junto a los
    # CSV de MOZE — los consume `_fetch_credit_cards` (web/server.py)
    # para el panel home `tarjetas` + el tool `credit_cards_summary`.
    # Wheel ~600KB + et_xmlfile transitiva (~30KB), BSD, sin deps
    # pesadas. Lo dejamos core (no opt-in) porque es el único parser
    # nativo de xlsx y el overhead es ínfimo.
    "openpyxl>=3.1",
]

[project.optional-dependencies]
dev = ["pytest>=9.0", "pytest-xdist>=3.6", "pytest-cov>=5.0"]
# Spotify recently-played ingest (`rag index` picks up per-day notes
# under 03-Resources/Spotify/). Opt-in because it needs a user-supplied
# `~/.config/obsidian-rag/spotify_client.json` with OAuth client ID +
# secret; 99% of users never configure it. Code path is guarded by
# `try: import spotipy` (rag.py:6035) + a SPOTIFY_CLIENT_ID env check,
# so a missing install degrades gracefully (ETL skipped, not crash).
# Install: `uv pip install obsidian-rag[spotify]`
spotify = ["spotipy>=2.23"]
# GLiNER zero-shot NER for Improvement #2 entity-aware retrieval
# (rag.py:_get_gliner_model). Powers `RAG_ENTITY_LOOKUP` (default ON
# post-2026-04-21 after backfill) + the one-shot
# `scripts/backfill_entities.py`. Soft dependency: `try: import gliner`
# fails gracefully (sticky-fail, entity_lookup falls through to semantic).
# Pulls heavy transitive deps (transformers, onnxruntime, sentencepiece,
# ~500 MB model at first load cached under ~/.cache/huggingface/hub/),
# which is why it's opt-in rather than core.
# Install: `uv pip install obsidian-rag[entities]`
entities = ["gliner>=0.2.26"]
# Speech-to-text via mlx-whisper (Ola 10, 2026-05-06). Enables the
# `rag transcribe <audio>` command to turn WhatsApp voice memos, iOS
# Voice Memos, meeting recordings into searchable text for the vault.
# Soft dependency: the transcribe command raises RuntimeError with a
# clear install hint when this extra isn't installed (rag.py:_load_whisper_model).
# mlx-whisper corre nativo sobre Apple Silicon GPU (Metal) — 4-8× más rápido
# que faster-whisper CPU+int8 en M-series, mismo Quality. Pesos auto-download
# de mlx-community/whisper-* a ~/.cache/huggingface/hub/ on first use
# (~480MB para small). Necesita ffmpeg en PATH para decodificar formatos
# que no sean WAV.
# Install: `uv tool install --reinstall --editable '.[stt]'`
stt = ["mlx-whisper>=0.4.0"]
# LoRA fine-tune del cross-encoder reranker (GC#2.C, 2026-04-23) +
# DPO+LoRA fine-tune del modelo de drafts WhatsApp (GC#3, 2026-05-01).
#
# Reranker: `scripts/finetune_reranker.py --mode lora` entrena un adapter
# PEFT (r=8, alpha=16, dropout=0.1) on top de bge-reranker-v2-m3 usando
# los pares positivos/negativos de `rag_feedback` + `rag_behavior`. El
# adapter se guarda en `~/.local/share/obsidian-rag/reranker_ft/` y solo
# se carga en runtime cuando `RAG_RERANKER_FT=1` (default OFF).
#
# Drafts: `scripts/finetune_drafts.py` entrena un adapter PEFT con DPO
# (TRL DPOTrainer) sobre Qwen2.5-7B-Instruct usando los preference pairs
# (bot_draft=rejected, sent_text=chosen) que el listener captura cuando
# el user edita un borrador con /editar. Adapter en
# `~/.local/share/obsidian-rag/drafts_ft/`, opt-in via `RAG_DRAFTS_FT=1`.
#
# `trl` agrega DPOTrainer + DPOConfig — la lib oficial de HuggingFace
# para Direct Preference Optimization. v0.11+ tiene la API estable
# `precompute_ref_log_probs` que reduce memoria 2x en CPU/MPS.
#
# Soft dependency: los scripts + los loaders fallan al base model con
# un warning a `silent_errors.jsonl` cuando peft / trl no están
# instalados. Install: `uv tool install --reinstall --editable '.[finetune]'`
finetune = [
    "peft>=0.12",
    "transformers>=4.40",
    "datasets>=2.20",
    "accelerate>=0.30",
    "trl>=0.11",
]
# Apple MLX backend para LLMs locales — migración Ollama → MLX
# completada en Olas 0-9 (2026-05-06). `RAG_LLM_BACKEND=mlx` es default
# y único valor soportado; `OllamaBackend` retirada en Ola 7,
# `import ollama` purgado en Ola 8, identificadores residuales
# renombrados en Ola 9. `get_backend()` siempre devuelve `MLXBackend`.
# `ollama>=0.6.1` removido de `dependencies` en Ola 8: rollback de
# emergencia requiere `git revert` de Ola 7+ commits + `uv pip install
# ollama>=0.6.1` manual.
#
# `mlx-lm` solo corre en Apple Silicon (sys_platform == 'darwin' +
# platform_machine == 'arm64'). En CI Linux el extra no se instala y los
# tests con marker `requires_mlx` se auto-skipean.
mlx = [
    "mlx-lm>=0.18; sys_platform == 'darwin' and platform_machine == 'arm64'",
    "mlx-vlm>=0.0.15; sys_platform == 'darwin' and platform_machine == 'arm64'",
]

[project.scripts]
rag = "rag:cli"
obsidian-rag-mcp = "mcp_server:main"

[tool.setuptools]
# Phase 1 del split del monolito (2026-04-25): rag.py se renombra a
# rag/__init__.py para volverse package, y rag/integrations/ aloja los
# 8 leaf modules de fuentes externas. mcp_server queda como top-level
# module porque es un wrapper independiente. prompts/ se movió a
# rag/prompts/ para que `Path(__file__).resolve().parent / "prompts"`
# siga resolviendo correctamente desde rag/__init__.py.
py-modules = ["mcp_server"]
packages = [
    "rag",
    "rag.integrations",
    "scripts",
    "web",
    "rag_anticipate",
    "rag_anticipate.signals",
    "rag_whisper_learning",
    "rag_routing_learning",
    # Implicit feedback learning (2026-04-26 — Sprint 1 del cierre del
    # loop de aprendizaje). Infiere `corrective_path` desde behavior
    # post-👎 sin pedir input al user. Lee rag_feedback + rag_behavior,
    # actualiza extra_json del feedback con el path inferido.
    "rag_implicit_learning",
    # LightGBM lambdarank ranker (2026-04-26 — Sprint 2 del cierre del
    # loop). Modelo no-lineal que reemplaza la combinación lineal de 11
    # pesos del ranker.json. Captura interacciones entre features (ej.
    # `click_prior * recency_cue`) que el lineal aplasta. Entrenamiento
    # offline desde rag_feedback + collect_ranker_features replay.
    "rag_ranker_lgbm",
]

# Include rag/prompts/**/*.md en el bundle del tool. Sin esto, `uv tool
# install --editable .` skip el prompts/ y `load_prompt()` raisea
# FileNotFoundError al import time desde ~/.local/share/uv/tools/.
[tool.setuptools.package-data]
"rag" = ["prompts/**/*.md"]

[tool.setuptools.data-files]
"share/obsidian-rag/prompts/rules" = ["rag/prompts/rules/chunk_as_data.v1.md", "rag/prompts/rules/name_preservation.v1.md"]
"share/obsidian-rag/prompts/intents" = [
  "rag/prompts/intents/system_rules.v1.md",
  "rag/prompts/intents/strict.v1.md",
  "rag/prompts/intents/chat.v1.md",
  "rag/prompts/intents/web.v1.md",
  "rag/prompts/intents/lookup.v1.md",
  "rag/prompts/intents/synthesis.v1.md",
  "rag/prompts/intents/synthesis.v2.md",
  "rag/prompts/intents/comparison.v1.md",
  "rag/prompts/intents/comparison.v2.md",
  "rag/prompts/intents/serve_meta.v1.md",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: multi-process stress tests (>1s wall; opt-out with `-m 'not slow'`)",
    "real_vault: test reads the real vault (opt-out of `_isolate_vault_path` autouse). Read-only operations only — writes MUST use monkeypatch.",
    "real_apple: test is allowed to hit the user's real Apple Reminders / Calendar / Contacts (opt-out of `_isolate_apple_integrations` autouse that sets OBSIDIAN_RAG_NO_APPLE=1). Use only for integration smokes; cleanup is the test's responsibility.",
    "requires_chat_model: test resolves a chat model via `resolve_chat_model()` and dispatches a real LLM call. Auto-skipped when no CHAT_MODEL_PREFERENCE-compatible model is available (CI on ubuntu-latest, sandbox environments without MLX weights).",
    "requires_mlx: test exercises the real `MLXBackend` end-to-end (loads MLX weights, runs `mlx_lm.generate`). Apple Silicon only; auto-skipped if `mlx_lm` is not importable.",
    "live: end-to-end live tests that spawn `rag serve` + hit the LLM backend (MLX) with real queries. Double opt-in: requires `RAG_E2E_LIVE=1` env var AND `-m live` or default-skips. ~60s warmup; NOT run in default `pytest tests/` sweep.",
    "no_auto_mlx_stub: opt-out of conftest's autouse `_reset_backend_singleton_per_test` MLX dispatch stub. Use for tests that exercise `_mlx_chat` / `_chat_stream_dispatch` directly (e.g. backend telemetry side-effect verification).",
]

[tool.ruff]
line-length = 100
target-version = "py313"
# Run across the whole project by default. CI passes explicit src=...
# but local `ruff check` with no args should mirror CI.
src = ["rag", "mcp_server.py", "web", "scripts"]

[tool.ruff.lint]
# E402: module-level imports after logging/warnings configuration are intentional
#       (rag.py bootstraps quiet/env-toggles before heavyweight imports).
# E741: ambiguous variable name `l` / `I` — used locally in a handful of
#       short-scoped comprehensions; no practical confusion, not worth a rename.
# E731: lambda assignment — three legit one-liners in web/server.py that are
#       clearer as lambdas than tiny named defs.
# E701/E702: multiple statements on one line — isolated instances in legacy
#       data-migration code; stylistic, not a bug source.
# F811: redefined-while-unused — a few `import sqlite3 as _sqlite3` shadows
#       inside SqliteVecCollection are intentional (local alias).
# F841: unused-variable — mostly deliberate (`_ = …` idiom without the
#       underscore). Enforcing would flag lots of benign assignments.
# F821: undefined-name — two string-quoted forward references ("sqlite3.Connection",
#       "OrderedDict") that resolve at runtime via local imports; ruff can't see
#       through the quoted annotations.
# F405: undefined-local-with-import-star-usage — falso positivo del re-export
#       pattern (`from rag.X import *` con `__all__` explícito en cada
#       sub-módulo). Architectural decision documentada en CLAUDE.md: split
#       2026-05-04+ usa star-import shims para preservar 100% compat con call
#       sites históricos (`from rag import _foo`). Si un símbolo no existe en
#       runtime, el ImportError se manifiesta al primer call — F405 estático
#       no aporta señal.
extend-ignore = ["E402", "E701", "E702", "E731", "E741", "F405", "F811", "F821", "F841"]
